--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,16 @@
 }
 ```
 footer {
-  font-size: 0.9em; /* Adjust the value as needed */
   text-align: center;
+  padding: 1em 0;
 }
 
 footer p {
-  margin: 0.5em 0; /* Add some margin between paragraphs */
+  margin: 0.5em 0;
 }
 
 footer a {
-  color: inherit; /* Ensure links inherit the color of the surrounding text */
-  text-decoration: underline; /* Underline the links */
+  color: inherit;
+  text-decoration: underline;
+  margin: 0 0.5em;
 }
